--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,6 @@
 }
 
 .title {
-  margin-left: 15%;
-  padding-top: 30px;
   font-family: 'Montserrat', sans-serif;
   font-size: 250%;
   font-weight: 800;
@@ -54,6 +52,11 @@ button:hover {
    margin-top: 40px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 800;
+}
+
+.header {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 800;
 }
 
 .Alpaca {
